--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,6 +1,10 @@
 <h1> Welcome to the item shop! </h1>
 <h2> Here are the items available for purchase: </h2>
+<h5>Item Name :</h5>
 <p>{{name}}</p>
+<h5>Price :</h5>
 <p>{{price}}</p>
+<h5>Description :</h5>
 <p>{{description}}</p>
+<h5>Effects :</h5>
 <p>{{effects}}</p>
