added name in html and heading in readme

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,3 +1,5 @@
+<h3> Fadiansah Feryan Fatha (2306275185)</h3>
+
 <h1> Welcome to the item shop! </h1>
 <h2> Here are the items available for purchase: </h2>
 <h5>Item Name :</h5>
