--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -5,7 +5,7 @@
 <h5>Item Name :</h5>
 <p>{{name}}</p>
 <h5>Price :</h5>
-<p>{{price}}</p>
+<p>{{price}} gold</p>
 <h5>Description :</h5>
 <p>{{description}}</p>
 <h5>Effects :</h5>
