--- a/e_commerce/templates/base.html
+++ b/e_commerce/templates/base.html
@@ -4,8 +4,22 @@
   <head>
     {% block meta %}
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     {% endblock meta %}
-    <script src="https://cdn.tailwindcss.com">
-    </script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+      body {
+        font-family: "Roboto", sans-serif;
+        font-weight: 500;
+        letter-spacing: 0.2px;
+      }
+    </style>
   </head>
+  <body>
+    {% block content %} {% endblock content %}
+  </body>
+</html>
