--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -5,28 +5,63 @@
 {% endblock meta %}
 
 {% block content %}
-<div class="login">
-  <h1>Login</h1>
+<div class="flex items-center justify-center min-h-screen bg-gray-800">
+  <div class="w-full max-w-md p-6 bg-gray-700 rounded-lg shadow-md">
+    <h2 class="mb-6 text-2xl font-bold text-center text-white">Login</h2>
+    <form method="POST" action='/login/'>
+      {% csrf_token %}
+      <div class="space-y-4">
+        <!-- Username  -->
+        <div>
+          <label for="id_username"
+            class="block mb-2 text-sm font-medium text-gray-300">
+            {{ form.username.label }}
+          </label>
+          <input
+            type="text"
+            name="username"
+            id="id_username"
+            class="w-full px-4 py-2 mt-2 text-gray-900 bg-gray-100 border border-gray-300 rounded-lg focus:border-blue-500 focus:ring focus:ring-blue-500 focus:ring-opacity-50"
+            value="{{ form.username.value }}" />
+          {{ form.username.errors }}
+        </div>
 
-  <form method="POST" action="">
-    {% csrf_token %}
-    <table>
-      {{ form.as_table }}
-      <tr>
-        <td></td>
-        <td><input class="btn login_btn" type="submit" value="Login" /></td>
-      </tr>
-    </table>
-  </form>
+        <!-- Password -->
+        <div>
+          <label for="id_password"
+            class="block mb-2 text-sm font-medium text-gray-300">
+            Password
+          </label>
+          <input
+            type="password"
+            name="password"
+            id="id_password"
+            class="w-full px-4 py-2 mt-2 text-gray-900 bg-gray-100 border border-gray-300 rounded-lg focus:border-blue-500 focus:ring focus:ring-blue-500 focus:ring-opacity-50" />
+          {{ form.password.errors }}
+        </div>
+      </div>
 
-  {% if messages %}
-  <ul>
-    {% for message in messages %}
-    <li>{{ message }}</li>
-    {% endfor %}
-  </ul>
-  {% endif %} Don't have an account yet?
-  <a href="{% url 'main:register' %}">Register Now</a>
+      <button
+        type="submit"
+        class="w-full px-4 py-2 mt-6 font-bold text-white bg-blue-600 rounded-lg hover:bg-blue-700 focus:outline-none focus:shadow-outline">
+        Login
+      </button>
+    </form>
+
+    <div class="text-center mt-4">
+      <p class="text-sm text-gray-300">
+        Don't have an account yet?
+        <a href="{% url 'main:register' %}"
+          class="font-medium text-indigo-200 hover:text-indigo-300">
+          Register here
+        </a>
+      </p>
+    </div>
+  </div>
 </div>
 
+<div id="welcome-message"
+  class="hidden fixed inset-0 flex items-center justify-center bg-white bg-opacity-75">
+  <h1 class="text-4xl font-bold text-blue-600 animate-welcome">Welcome!</h1>
+</div>
 {% endblock content %}
