--- a/main/templates/edit_product.html
+++ b/main/templates/edit_product.html
@@ -5,15 +5,6 @@
 {% block content %}
 {% include 'navbar.html' %}
 <style>
-  .sticky-bar {
-    position: sticky;
-    top: 0;
-    z-index: 50;
-    background-color: #1f2937; /* gray-800 */
-    padding: 1rem;
-    border-bottom: 1px solid #374151; /* gray-700 */
-  }
-
   .bottom-fixed {
     position: fixed;
     bottom: 0;
@@ -24,7 +15,7 @@
   }
 
   body {
-    background-color: #1f2937; /* Matching the background color */
+    background-color: #1f2937; 
   }
 
   .form-container {
@@ -45,7 +36,7 @@
 
   input:focus, textarea:focus {
     border-color: #6366f1; /* indigo-500 */
-    box-shadow: 0 0 0 3px rgba(99, 102, 241, 0.5); /* Focus effect */
+    box-shadow: 0 0 0 3px rgba(99, 102, 241, 0.5); 
   }
 </style>
 
