--- a/main/templates/navbar.html
+++ b/main/templates/navbar.html
@@ -5,10 +5,8 @@
             <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
                 <button id="menu-button"
                     class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white">
-                    <svg class="block h-6 w-6"
-                        xmlns="http://www.w3.org/2000/svg" fill="none"
-                        viewBox="0 0 24 24" stroke="currentColor"
-                        aria-hidden="true">
+                    <svg class="block h-6 w-6" fill="none"
+                        viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round"
                             stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
                     </svg>
